name:                distributed-process-experiment
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jonathan Knowles
maintainer:          mail@jonathanknowles.net
copyright:           Jonathan Knowles
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      source/library
    exposed-modules:     CLI
                         Config
                         Context
                         Master
                         Message
                         Pretty
                         Process
                         Slave
                         Startup
                         Time
    build-depends:       base >= 4.7 && < 5
                       , binary                             >= 0.8.3.0  && < 2
                       , distributed-process                >= 0.6.6    && < 2
                       , distributed-process-simplelocalnet >= 0.2.3.3  && < 2
                       , network-transport-tcp              >= 0.5.1    && < 2
                       , optparse-applicative               >= 0.13.2.0 && < 2
                       , random                             >= 1.1      && < 2
                       , text                               >= 1.2.2.1  && < 2
                       , time                               >= 1.6.0.1  && < 2
                       , vector                             >= 0.11.0.0 && < 2
                       , vector-binary-instances            >= 0.2.3.5  && < 2
                       , vector-th-unbox                    >= 0.2.1.6  && < 2
    default-language:    Haskell2010

executable distributed-process-experiment
    hs-source-dirs:      source/executable
    main-is:             Main.hs
    ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , distributed-process-experiment
    default-language:    Haskell2010

test-suite distributed-process-experiment-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      source/test
    main-is:             Main.hs
    other-modules:       Test.Time
    build-depends:       base
                       , distributed-process-experiment
                       , QuickCheck                         >= 2.9.2    && < 3
                       , time                               >= 1.6.0.1  && < 2
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

